# memoir

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Makefile  README.md  RELEASING.md  docker-compose.dev.yml  docker-compose.yml  docker.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  start-docker.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: README.md  cc-smoke.yml  ci.yml  docs.yml  mcp-release.yml  pypi-smoke.yml  release.yml
api/classifier/: index.html
api/memento/: index.html
api/memoir/: index.html
api/search/: index.html
api/store/: index.html
api/taxonomy/: index.html
architecture/: index.html
basic_usage/: index.html
benchmarks/: classifier.py
benchmarks/data/: recall_test_queries.json  remember_test_data.json
benchmarks/locomo/: README.md  cognitive.py  data.py  judge.py  memoir_runner.py  run.py
claude_code/: index.html
cli/: index.html
codex/: index.html
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  start-docker.sh
docs/: Makefile  TUI_SPEC.md  architecture.md  architecture.rst  basic_usage.md  basic_usage.rst  claude_code.md  cli.md  client-api-design.md  codex.md  conf.py  examples.md  examples.rst  faq.md  faq.rst  hermes.md  hierarchical_taxonomy_control.md  index.md  index.rst  installation.md  installation.rst  mcp.md  openclaw-integration-spec.md  openclaw.md  quickstart.md  quickstart.rst  requirements.txt  ui.md  watch.md
docs/_static/: .gitkeep  custom.css
docs/api/: classifier.md  classifier.rst  memento.md  memento.rst  memoir.md  memoir.rst  search.md  search.rst  store.md  store.rst  taxonomy.md  taxonomy.rst
docs/design/: framework_analysis.md  llm_proxy.md
docs/examples/: context_branching.md  context_branching.rst  memory_debugging.md  memory_debugging.rst  production_debugging.md  production_debugging.rst  reproducible_testing.md  reproducible_testing.rst
docs/theory/: classifier.md  conflict-merge.md  index.md  memento.md  related-work.md  search.md
examples/: README.md  basic_usage.py  benchmark_classifier.py  context_branching.py  index.html  intelligent_taxonomy.py  intelligent_taxonomy_demo.py  langgraph.py  langgraph_integration.py  langgraph_with_memoir.py  langmem_style_with_memoir.py  locomo.py  locomo_evaluation.py  performance_benchmark.py  production_debugging.py  reproducible_testing.py  semantic_taxonomy_classify.py  simulation.py  simulation_live_demo.py  state_debugging.py  taxonomy.py  versioning.py  versioning_control.py
examples/context_branching/: index.html
examples/data/: conversations.txt  locomo10.json  locomo10_conversation1.json
examples/memory_debugging/: index.html
examples/notebooks/: README.md  basic_usage.ipynb  conversational_context_branching.ipynb  memoir_basic_usage.ipynb  memory_state_debugging.ipynb  production_debugging.ipynb  reproducible_testing.ipynb  requirements.txt
examples/production_debugging/: index.html
examples/reproducible_testing/: index.html
faq/: index.html
hermes/: index.html
installation/: index.html
mcp/: index.html
openclaw/: index.html
packaging/mcp/: README.md  manifest.json  server.json
plugins/claude-code/: README.md  TODO.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: memoir-blame.md  memoir-branch.md  memoir-checkout.md  memoir-diff.md  memoir-forget.md  memoir-get.md  memoir-keys.md  memoir-merge.md  memoir-onboard.md  memoir-proof.md  memoir-remember.md  memoir-status.md  memoir-sync-branch.md  memoir-sync.md  memoir-taxonomy.md  memoir-time-travel.md  memoir-ui-stop.md  memoir-ui.md  memoir-unmerged.md  memoir-verify.md  memory-recall.md  recall.md  remember.md  status.md  sync.md  ui.md
plugins/claude-code/hooks/: collect-edits.sh  collect-metrics.sh  common.sh  hooks.json  merge-metrics.py  parse-transcript.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
plugins/codex/: README.md
plugins/docker-tests/: README.md
plugins/hermes/: README.md  __init__.py  bridge.py  cli.py  plugin.yaml
plugins/memoir-codex/: PR_DESCRIPTION.md  README.md
plugins/opencode/: README.md  install.sh  package-lock.json  package.json  tsconfig.json
quickstart/: index.html
scripts/: check_status.py  check_version_consistency.py  stamp_mcp_version.py
scripts/cc-smoke/: README.md  run.sh  smoke.sh
scripts/pypi-smoke/: Dockerfile  README.md  run.sh  smoke.sh
search/: search_index.json
src/langmem_prollytree/: __init__.py
src/memoir/: __init__.py
tests/: conftest.py  pytest.ini  test_backend_resolution.py  test_capture.py  test_classifier.py  test_cli.py  test_git_safety.py  test_gpt_taxonomy.py  test_hermes_plugin.py  test_iterative_taxonomy.py  test_llm_backend.py  test_locomo_conversations.py  test_mcp_server.py  test_prollytree_backends.py  test_prollytree_namespace.py  test_proximity_smoke.py  test_proxy_e2e.py  test_sdk.py  test_search_tiered.py  test_store_handler_code_repo.py  test_taxonomy.py  test_taxonomy_loader.py  test_taxonomy_markdown.py  test_tui_smoke.py  test_ui_commits.py  test_ui_diff_schema.py  test_ui_e2e.py  test_ui_facet_read.py  test_ui_schemas.py  test_ui_statistics.py  test_versioning.py  test_versioning_control.py  test_watch_cross_process.py  test_watch_handler.py  test_watch_service.py
tests/data/: llm_locomo10_responses.json  llm_responses.json
tests/test_integration/: test_branch_workflow.py  test_crypto_workflow.py  test_memory_workflow.py
tests/test_services/: __init__.py  test_branch_service.py  test_crypto_service.py  test_memory_service.py  test_merge_policy.py  test_store_service.py
theory/: index.html
theory/classifier/: index.html
theory/conflict-merge/: index.html
theory/memento/: index.html
theory/related-work/: index.html
theory/search/: index.html
ui/: index.html
watch/: index.html
(+461 files in other folders)
