[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoir-ai"
dynamic = ["version"]
description = "High-performance semantic memory system integrating LangMem with ProllyTree"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "zhangfengcdt", email = "f.feng.zhang@gmail.com"},
]
keywords = ["ai", "memory", "langchain", "langgraph", "prollytree", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "prollytree>=0.3.2",
    "langgraph>=0.6.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "click>=8.0.0",
]

[project.scripts]
memoir = "memoir.cli.main:main"
memoir-mcp = "memoir.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
    "safety>=2.0.0",
    "playwright>=1.55.0",
    "pytest-playwright>=0.7.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.7.0",
]

tui = [
    "textual>=3.0.0",
    "rich>=13.0.0",
]

# Enables ProllyTreeMemoryStoreManager (drop-in LangMem replacement).
# Without this extra, `from memoir import ProllyTreeMemoryStoreManager` will fail
# with ImportError; the rest of memoir works fine.
langmem = [
    "langmem>=0.0.29",
]

# Enables LLM-backed classification and search via memoir.llm.get_llm().
# Without this extra, `get_llm(...)` raises ImportError; the rest of memoir works fine.
litellm = [
    "litellm>=1.0.0",
]

all = [
    "textual>=3.0.0",
    "rich>=13.0.0",
    "langmem>=0.0.29",
    "litellm>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zhangfengcdt/memoir"
Documentation = "https://zhangfengcdt.github.io/memoir/"
Repository = "https://github.com/zhangfengcdt/memoir"
Issues = "https://github.com/zhangfengcdt/memoir/issues"

[tool.hatch.version]
path = "src/memoir/__init__.py"

[tool.hatch.build.targets.wheel]
# hatchling picks up all files under src/memoir by default, including
# non-Python assets (ui/ui.html, ui/static/**, taxonomy/data/**).
# For the v2 webapp we ship only the built `dist/` bundle — never the
# React sources, node_modules, or build configs. The dist/ folder is
# git-ignored, so we force-include it via `artifacts`.
packages = ["src/memoir"]
artifacts = [
    "src/memoir/ui/webapp/dist/**",
]
exclude = [
    "src/memoir/ui/webapp/node_modules",
    "src/memoir/ui/webapp/src",
    "src/memoir/ui/webapp/package.json",
    "src/memoir/ui/webapp/pnpm-lock.yaml",
    "src/memoir/ui/webapp/package-lock.json",
    "src/memoir/ui/webapp/tsconfig.json",
    "src/memoir/ui/webapp/tsconfig.tsbuildinfo",
    "src/memoir/ui/webapp/vite.config.ts",
    "src/memoir/ui/webapp/index.html",
    "src/memoir/ui/webapp/.gitignore",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/memoir",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CHANGELOG.md",
]
exclude = [
    "src/memoir/ui/webapp/node_modules",
    "src/memoir/ui/webapp/dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["memoir"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B110", "B404", "B601", "B603", "B607", "B608"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
